src/components/ui/FacilityCard/FacilityCard.css
:root {
    --error-color: #891515;
    --warning-color: #ffc324;
}

.facility-card {
    border: none;
    padding: 3px;
    font-size: 1.2rem;
    width: 100%;
    line-height: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: inherit;
    outline: 0;
}

.facility-card:hover {
    background-color: #1ea7fd;
    color: #ffffff;
    cursor: pointer;
}

.facility-card-title {
    font-size: medium;
    margin: 0 4rem 0 2rem;
    text-align: left;
    width: 50%;
}

.facility-card-deadlines {
    width: 50%;
    align-items: right;
    float: right;
}

.chip-expired {
    background-color: var(--error-color) !important;
    color: #ffffff !important;
    width: 2.7rem;
    float: right;
}

.chip-due {
    background-color: var(--warning-color) !important;
    color: #ffffff !important;
    width: 2.7rem;
    float: right;
}

